--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,42 @@
+<!-- fragments/navbar.html -->
 <div th:fragment="navbar">
+  <nav class="navbar navbar-fixed-top header">
+    <div class="col-md-12">
+      <div class="navbar-header">
+        <a href="/" class="navbar-brand">SLiPP</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
+          <i class="glyphicon glyphicon-search"></i>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse1">
+        <form class="navbar-form pull-left">
+          <div class="input-group" style="max-width:470px;">
+            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+            <div class="input-group-btn">
+              <button class="btn btn-default btn-primary" type="submit">
+                <i class="glyphicon glyphicon-search"></i>
+              </button>
+            </div>
+          </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="https://slipp.net" target="_blank">SLiPP</a></li>
+              <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+            </ul>
+          </li>
+          <li th:if="${session.loginUser != null}">
+            <a th:href="@{/users/{id}(id=${session.loginUser.id})}">
+              <i class="glyphicon glyphicon-user"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <div class="navbar navbar-default" id="subnav">
     <div class="col-md-12">
       <div class="navbar-header">
@@ -22,11 +60,21 @@
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse2">
         <ul class="nav navbar-nav navbar-right">
+          <li th:if="${userName != null}" th:text="${userName.name} + '님 환영합니다.'"></li>
           <li><a href="/" role="button">Posts</a></li>
-          <li><a th:href="@{/users/login}" role="button">로그인</a></li>
-          <li><a th:href="@{/users/create}" role="button">회원가입</a></li>
-          <li><a href="/users/logout" role="button">로그아웃</a></li>
-          <li><a href="#" role="button">개인정보수정</a></li>
+          <li th:if="${session.loginUser == null}">
+            <a th:href="@{/users/login}" role="button">로그인</a>
+          </li>
+          <li th:if="${session.loginUser == null}">
+            <a th:href="@{/users/create}" role="button">회원가입</a>
+          </li>
+
+          <li th:if="${session.loginUser != null}">
+            <a th:href="@{/users/logout}" role="button">로그아웃</a>
+          </li>
+          <li th:if="${session.loginUser != null}">
+            <a href="/users" role="button">개인정보수정</a>
+          </li>
         </ul>
       </div>
     </div>
