--- a/src/main/resources/templates/qna/change.html
+++ b/src/main/resources/templates/qna/change.html
@@ -18,10 +18,11 @@
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default content-main">
-            <form name="question" method="post" action="/questions">
+            <form name="question" method="post">
+                <input type="hidden" name="_method" value="put"/>
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName.name}" readonly/>
+                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName}" readonly/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
