--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -5,202 +5,107 @@
     <meta charset="utf-8">
     <title>SLiPP Java Web Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!--[if lt IE 9]>
-    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/styles.css}" rel="stylesheet">
-
 </head>
 <body>
-<nav class="navbar navbar-fixed-top header">
-    <div class="col-md-12">
-        <div class="navbar-header">
-
-            <a href="../user/index.html" class="navbar-brand">SLiPP</a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
-                <i class="glyphicon glyphicon-search"></i>
-            </button>
-
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse1">
-            <form class="navbar-form pull-left">
-                <div class="input-group" style="max-width:470px;">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="https://slipp.net" target="_blank">SLiPP</a></li>
-                        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-                    </ul>
-                </li>
-                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container" id="main">
+    <div th:if="${deleteError}" class="alert alert-danger" role="alert">
+        <span th:text="${deleteError}"></span>
+    </div>
+
+    <div th:if="${loginError}" class="alert alert-warning" role="alert">
+        <span th:text="${loginError}"></span>
+    </div>
+
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
-          <header class="qna-header">
-              <h2 class="qna-title" th:text="${board.title}">게시글 제목</h2>
-          </header>
-          <div class="content-main">
-              <article class="article">
-                  <div class="article-header">
-                      <div class="article-header-thumb">
-                          <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
-                      </div>
-                      <div class="article-header-text">
-                          <a th:href="${board.writer == '익명' ? '/' : '/users/' + board.writer}" class="article-author-name"
-                             th:text="${board.writer}">작성자</a>
-                          <a href="/questions/413" class="article-header-time" title="퍼머링크">
-                              2015-12-30 01:47
-                              <i class="icon-link"></i>
-                          </a>
-                      </div>
-                  </div>
-                  <div class="article-doc">
-                      <p th:text="${board.content}">게시글 내용</p>
-                  </div>
-                  <div class="article-util">
-                      <ul class="article-util-list">
-                          <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
-                          </li>
-                          <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
-                                  <input type="hidden" name="_method" value="DELETE">
-                                  <button class="link-delete-article" type="submit">삭제</button>
-                              </form>
-                          </li>
-                          <li>
-                              <a class="link-modify-article" href="/templates/user/index.html">목록</a>
-                          </li>
-                      </ul>
-                  </div>
-              </article>
+            <header class="qna-header">
+                <h2 class="qna-title" th:text="${board.title}">게시글 제목</h2>
+            </header>
+            <div class="content-main">
+                <article class="article">
+                    <div class="article-header">
+                        <div class="article-header-thumb">
+                            <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
+                        </div>
+                        <div class="article-header-text">
+                            <a th:href="@{/users/{id}(id=${board.writerId})}" class="author" th:text="${board.writerName}">작성자</a>
+                            <a href="#" class="article-header-time" title="퍼머링크">
+                                <span th:text="${board.uploadDate}"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="article-doc">
+                        <p th:text="${board.content}">게시글 내용</p>
+                    </div>
+                </article>
 
-              <div class="qna-comment">
-                  <div class="qna-comment-slipp">
-                      <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
-                      <div class="qna-comment-slipp-articles">
+                <h3>댓글</h3>
 
-                          <article class="article" id="answer-1405">
-                              <div class="article-header">
-                                  <div class="article-header-thumb">
-                                      <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-                                  </div>
-                                  <div class="article-header-text">
-                                      <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                          2016-01-12 14:06
-                                      </a>
-                                  </div>
-                              </div>
-                              <div class="article-doc comment-doc">
-                                  <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
-                              </div>
-                              <div class="article-util">
-                                  <ul class="article-util-list">
-                                      <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                      </li>
-                                      <li>
-                                          <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
-                                              <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
-                                          </form>
-                                      </li>
-                                  </ul>
-                              </div>
-                          </article>
-                          <article class="article" id="answer-1406">
-                              <div class="article-header">
-                                  <div class="article-header-thumb">
-                                      <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-                                  </div>
-                                  <div class="article-header-text">
-                                      <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                          2016-01-12 14:06
-                                      </a>
-                                  </div>
-                              </div>
-                              <div class="article-doc comment-doc">
-                                  <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
-                              </div>
-                              <div class="article-util">
-                                  <ul class="article-util-list">
-                                      <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                      </li>
-                                      <li>
-                                          <form class="form-delete" action="/questions/413/answers/1405" method="POST">
-                                              <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
-                                          </form>
-                                      </li>
-                                  </ul>
-                              </div>
-                          </article>
-                          <form class="submit-write">
-                              <div class="form-group" style="padding:14px;">
-                                  <textarea class="form-control" placeholder="Update your status"></textarea>
-                              </div>
-                              <button class="btn btn-success pull-right" type="button">답변하기</button>
-                              <div class="clearfix" />
-                          </form>
-                      </div>
-                  </div>
-              </div>
-          </div>
+                <!-- 댓글 리스트 -->
+                <div class="qna-comment">
+                    <div class="qna-comment-slipp">
+                        <p class="qna-comment-count">
+                            <strong th:text="${#lists.size(comments)}"></strong>개의 의견
+                        </p>
+                        <div class="qna-comment-slipp-articles">
+                            <article class="article" th:each="comment : ${comments}">
+                                <div class="article-header">
+                                    <div class="article-header-thumb">
+                                        <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+                                    </div>
+                                    <div class="article-header-text">
+                                        <a href="#" class="article-author-name" th:text="${comment.user.name}">작성자</a>
+                                        <span class="article-header-time" th:text="${comment.createdAt}">날짜</span>
+                                    </div>
+                                </div>
+                                <div class="article-doc comment-doc">
+                                    <p th:text="${comment.content}">댓글 내용</p>
+                                </div>
+                                <div class="article-util">
+                                    <ul class="article-util-list">
+                                        <li th:if="${loginUser != null and loginUser.id == comment.user.id}">
+                                            <form class="form-delete" th:action="@{/comments/{id}(id=${comment.id}, boardId=${board.id})}" method="post" onsubmit="return confirm('댓글을 삭제하시겠습니까?');">
+                                                <button class="delete-answer-button" type="submit">삭제</button>
+                                            </form>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 댓글 입력 폼 (로그인한 사용자만 가능) -->
+                <div class="qna-comment" th:if="${loginUser != null}">
+                    <form class="submit-write" th:action="@{/comments}" method="post">
+                        <input type="hidden" name="boardId" th:value="${board.id}">
+                        <input type="hidden" name="userId" th:value="${loginUser.userSeq}">
+                        <div class="form-group" style="padding:14px;">
+                            <textarea class="form-control" name="content" placeholder="댓글을 입력하세요" required></textarea>
+                        </div>
+                        <button class="btn btn-success pull-right" type="submit">댓글 작성</button>
+                        <div class="clearfix"></div>
+                    </form>
+                </div>
+
+                <!-- 로그인하지 않은 경우 -->
+                <div class="qna-comment" th:if="${loginUser == null}">
+                    <p>댓글을 작성하려면 <a th:href="@{/login}">로그인</a>하세요.</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-<script type="text/template" id="answerTemplate">
-	<article class="article">
-		<div class="article-header">
-			<div class="article-header-thumb">
-				<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-			</div>
-			<div class="article-header-text">
-				<a href="#" class="article-author-name">{0}</a>
-				<div class="article-header-time">{1}</div>
-			</div>
-		</div>
-		<div class="article-doc comment-doc">
-			{2}
-		</div>
-		<div class="article-util">
-		<ul class="article-util-list">
-			<li>
-				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
-			</li>
-			<li>
-				<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
-					<input type="hidden" name="_method" value="DELETE">
-                     <button type="submit" class="delete-answer-button">삭제</button>
-				</form>
-			</li>
-		</ul>
-		</div>
-	</article>
-</script>
 
 <!-- script references -->
 <script src="../../static/js/jquery-2.2.0.min.js"></script>
 <script src="../../static/js/bootstrap.min.js"></script>
 <script src="../../static/js/scripts.js"></script>
-	</body>
+
+</body>
 </html>
