--- a/src/main/resources/templates/user/change.html
+++ b/src/main/resources/templates/user/change.html
@@ -12,45 +12,13 @@
   <link th:href="@{/css/styles.css}" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-fixed-top header">
-  <div class="col-md-12">
-    <div class="navbar-header">
-
-      <a href="index.html" class="navbar-brand">SLiPP</a>
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
-        <i class="glyphicon glyphicon-search"></i>
-      </button>
-
-    </div>
-    <div class="collapse navbar-collapse" id="navbar-collapse1">
-      <form class="navbar-form pull-left">
-        <div class="input-group" style="max-width:470px;">
-          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-          <div class="input-group-btn">
-            <button class="btn btn-default btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-          </div>
-        </div>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://slipp.net" target="_blank">SLiPP</a></li>
-            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-          </ul>
-        </li>
-        <li><a href="list.html"><i class="glyphicon glyphicon-user"></i></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container" id="main">
   <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default content-main">
-      <form name="changeInfo" method="post" th:action="@{/users/{id}/revise(id=${user.id})}">
+      <form name="changeInfo" method="post">
         <input type="hidden" name="_method" value="put">
         <div class="form-group">
         </div>
