--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -13,43 +13,12 @@
 	</head>
 	
 	<body>
-<nav class="navbar navbar-fixed-top header">
- 	<div class="col-md-12">
-        <div class="navbar-header">
-
-            <a href="index.html" class="navbar-brand">SLiPP</a>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
-          <i class="glyphicon glyphicon-search"></i>
-          </button>
-      
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse1">
-          <form class="navbar-form pull-left">
-              <div class="input-group" style="max-width:470px;">
-                <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-                <div class="input-group-btn">
-                  <button class="btn btn-default btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
-              </div>
-          </form>
-          <ul class="nav navbar-nav navbar-right">             
-             <li>
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
-                <ul class="dropdown-menu">
-                  <li><a href="https://slipp.net" target="_blank">SLiPP</a></li>
-                  <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-                </ul>
-             </li>
-             <li><a href="list.html"><i class="glyphicon glyphicon-user"></i></a></li>
-           </ul>
-        </div>	
-     </div>	
-</nav>
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+        <div class="alert alert-danger" role="alert" th:if="${loginError}" th:text="${loginError}"></div>
         <div class="panel panel-default qna-list">
             <ul class="list">
                 <li th:each="board, stat : ${boards}">
@@ -61,7 +30,7 @@
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
                                 <span class="time" th:text="${board.uploadDate}"></span>
-                                <a th:href="${board.writer == '익명' ? '/' : '/users/' + board.writer}" class="author" th:text="${board.writer}"></a>
+                                <a th:href="@{/users/{id}(id=${board.writerId})}" class="author" th:text="${board.writerName}"></a>
                             </div>
                             <div class="reply" title="댓글">
                                 <i class="icon-reply"></i>
