--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -9,21 +9,6 @@
     <link th:href="@{/css/styles.css}" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-fixed-top header">
-    <div class="col-md-12">
-        <div class="navbar-header">
-            <a href="index.html" class="navbar-brand">SLiPP</a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
-                <i class="glyphicon glyphicon-search"></i>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse1">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="list.html"><i class="glyphicon glyphicon-user"></i></a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
@@ -31,10 +16,7 @@
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
             <!-- 로그인 실패 시 오류 메시지 -->
-            <div class="alert alert-danger" role="alert" th:if="${param.error}">
-                아이디 또는 비밀번호가 틀립니다. 다시 로그인 해주세요.
-            </div>
-
+            <div class="alert alert-danger" role="alert" th:if="${loginError}" th:text="${loginError}"></div>
             <form name="loginForm" method="post" action="/users/login">
                 <div class="form-group">
                     <label for="id">사용자 아이디</label>
