--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,6 +8,7 @@
             <div th:if="${session.sessionedUser == null}">
                 <a href="/login" class="btn">로그인</a>
                 <a href="/register" class="btn">회원가입</a>
+                <a href="/login" class="btn write-btn">글쓰기</a>
             </div>
             <!-- 로그인한 경우 -->
             <div th:if="${session.sessionedUser != null}">
