--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
-    <title>회원가입</title>
+    <title>회원수정</title>
 </head>
 <body>
 <main layout:fragment="content">
@@ -11,10 +11,24 @@
             <div class="col-lg-8">
                 <div class="card shadow-sm border-0 rounded-3">
                     <div class="card-header bg-primary text-white py-3">
-                        <h2 class="text-center mb-0 fw-bold">회원가입</h2>
+                        <h2 class="text-center mb-0 fw-bold">회원수정</h2>
                     </div>
+
                     <div class="card-body p-4">
-                        <form method="post" th:action="@{/users/{id}/form(id=${user.userId})}">
+                        <form method="post" th:action="@{/users/{id}/update(id=${user.id})}">
+
+                            <div class="mb-4">
+                                <label for="confirmPassword" class="form-label fw-bold">비밀번호 확인</label>
+                                <input type="password" class="form-control form-control-lg" id="confirmPassword" name="confirmPassword" placeholder="기존 비밀번호를 입력하세요">
+                            </div>
+
+                            <th:block th:unless="${message == null}">
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    [[ ${message} ]]
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            </th:block>
+
                             <div class="mb-4">
                                 <label for="userId" class="form-label fw-bold">아이디</label>
                                 <input type="text" class="form-control form-control-lg" id="userId" name="userId" th:value="${user.userId}" readonly>
@@ -31,7 +45,7 @@
                             </div>
 
                             <div class="d-grid gap-2 d-flex justify-content-center mt-4">
-                                <button type="submit" class="btn btn-lg btn-primary px-5 py-3">등록하기</button>
+                                <button type="submit" class="btn btn-lg btn-primary px-5 py-3">수정하기</button>
                             </div>
                         </form>
                     </div>
