--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <!-- 글쓰기 버튼 추가 -->
         <div class="d-flex justify-content-end mb-4">
-            <a href="/write" class="btn btn-primary">
+            <a href="/articles/write" class="btn btn-primary">
                 <i class="bi bi-pencil-square"></i> 게시글 작성
             </a>
         </div>
