--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="kr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>SLiPP Java Web Programming</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-</head>
-<body>
+	<head>
+		<title>SLiPP Java Web Programming</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/css/styles.css}">
+	</head>
+	<body>
 
     <!-- 헤더 포함 -->
     <th:block th:replace="~{layout/header :: header}"></th:block>
@@ -20,20 +18,23 @@
         <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
             <div class="panel panel-default qna-list">
                 <ul class="list">
-                    <li th:each="question : ${questions}">
+
+
+                    <!-- ✅ 2. 사용자가 작성한 게시글 (Thymeleaf 동적 데이터) -->
+                    <li th:each="board : ${boards}">
                         <div class="wrap">
                             <div class="main">
                                 <strong class="subject">
-                                    <a th:href="@{/qna/{id}(id=${question.id})}" th:text="${question.title}"></a>
+                                    <a th:href="@{/boards/{id}(id=${board.boardId})}" th:text="${board.title}"></a>
                                 </strong>
                                 <div class="auth-info">
-                                    <i class="icon-add-comment"></i>
-                                    <span class="time" th:text="${question.createdDate}"></span>
-                                    <a th:href="@{/users/{id}(id=${question.author.id})}" th:text="${question.author.name}" class="author"></a>
-                                </div>
-                                <div class="reply" title="댓글">
-                                    <i class="icon-reply"></i>
-                                    <span class="point" th:text="${question.commentCount}"></span>
+<!--                                    <i class="icon-add-comment"></i>-->
+<!--                                    <span class="time" th:text="${board.createdDate}"></span>-->
+                                    <span class="author" th:text="${board.writer}"></span>
+<!--                                </div>-->
+<!--                                <div class="reply" title="댓글">-->
+<!--                                    <i class="icon-reply"></i>-->
+<!--                                    <span class="point" th:text="${board.commentCount}"></span>-->
                                 </div>
                             </div>
                         </div>
@@ -53,7 +54,7 @@
                         </ul>
                     </div>
                     <div class="col-md-3 qna-write text-right">
-                        <a th:href="@{/qna/form}" class="btn btn-primary" role="button">질문하기</a>
+                        <a th:href="@{/boards/new}" class="btn btn-primary" role="button">질문하기</a>
                     </div>
                 </div>
             </div>
