--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -18,6 +18,10 @@
 
     <div class="container" id="main">
        <div class="col-md-10 col-md-offset-1">
+           <!-- userProfile -> 사용자 없으면 에러 보여주기-->
+           <div th:if="${errorMessage}" class="alert alert-warning">
+               <p th:text="${errorMessage}"></p>
+           </div>
           <div class="panel panel-default">
               <table class="table table-hover">
                   <thead>
@@ -34,7 +38,7 @@
     <!--                      <td th:text="${user.userId}"></td> &lt;!&ndash; 사용자 아이디 (Userid 값) &ndash;&gt;-->
                           <td th:text="${user.name}"></td> <!-- 사용자 이름 -->
                           <td th:text="${user.email}"></td> <!-- 사용자 이메일 -->
-                          <td><a th:href="@{/user/edit/{id}(id=${user.id})}" class="btn btn-success" role="button">수정</a></td>
+                          <td><a th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-success" role="button">수정</a></td>
                       </tr>
                   </tbody>
               </table>
