--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -16,32 +16,45 @@
     <th:block th:replace="~{layout/subnav :: subnav}"></th:block>
 
     <div class="container" id="main">
+        <!-- 비밀번호 틀림 -> 팝업 알림 스크립트-->
+        <script th:if="${errorMessage}">
+            alert('[[${errorMessage}]]');
+        </script>
+
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default content-main">
-                <form name="question" method="post" action="/users/create">
+
+                <form name="updateUser" method="post" th:action="@{/users/{id}/update(id=${user.id})}">
+                    <!-- Hidden으로 PUT 메소드 사용 -->
+                    <input type="hidden" name="_method" value="PUT" />
+
+                    <!-- 🔒 현재 비밀번호 입력 (검증용) -->
                     <div class="form-group">
-                        <label for="userId">사용자 아이디</label>
-                        <input type="text" class="form-control" id="userId" name="userId" placeholder="User ID" required>
+                        <label for="currentPassword">현재 비밀번호</label>
+                        <input type="password" class="form-control" id="currentPassword" name="currentPassword" required>
                     </div>
+
+                    <!-- 🔑 새 비밀번호 입력 (수정할 값) -->
                     <div class="form-group">
-                        <label for="password">비밀번호</label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+                        <label for="newPassword">새 비밀번호</label>
+                        <input type="password" class="form-control" id="newPassword" name="newPassword" required>
                     </div>
+
                     <div class="form-group">
                         <label for="name">이름</label>
-                        <input class="form-control" id="name" name="name" placeholder="Name" required>
+                        <input class="form-control" id="name" name="name" th:value="${user.name}" required>
                     </div>
+
                     <div class="form-group">
                         <label for="email">이메일</label>
-                        <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                        <input type="text" class="form-control" id="email" name="email" th:value="${user.email}" required>
                     </div>
-                    <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
-                    <div class="clearfix"></div>
+
+                    <button type="submit" class="btn btn-primary">수정하기</button>
                 </form>
             </div>
         </div>
     </div>
-
 
     <!-- script references -->
     <th:block th:replace="~{layout/footer :: footer}"></th:block>
